feat(HU-C28): implement tests for Sonarqube